Adding basic CRUD support
