# app/api/v1/components/score/model.js
@@ -1,0 +1,21 @@
+const createModel = require('../../util/util');
+
+const schema = {
+  similarity: {
+    type: Number,
+  },
+  naturalness: {
+    type: Number,
+  },
+  nativeness: {
+    type: Number,
+  },
+  utteranceID: {
+    type: Number,
+    required: true,
+  },
+};
+
+const model = createModel('Score', schema);
+
+module.exports = model;
