# app/api/v1/route.js
@@ -5,8 +5,16 @@ const router = new Router();
 /*
  * References to each resource routers
  */
-const helloWorld = require('./components/hello-world/route');
+const audio = require('./components/audio/route');
+const model = require('./components/model/route');
+const score = require('./components/score/route');
+const speaker = require('./components/speaker/route');
+const utterance = require('./components/utterance/route');
 
-router.use('/hello-world', helloWorld);
+router.use('/audio', audio);
+router.use('/model', model);
+router.use('/score', score);
+router.use('/speaker', speaker);
+router.use('/utterance', utterance);
 
 module.exports = router;
